4530.	[bug]		"dyndb" is dependent on dlopen existing / being
			enabled. [RT #45291]

4629.	[bug]		dns_client_startupdate could not be called with a
			running client. [RT #45277]

4628.	[bug]		Fixed a potential reference leak in query_getdb().
			[RT #45247]

4626.	[test]		Added more tests for handling of different record
			ordering in CNAME and DNAME responses. [QA #430]

4625.	[bug]		Running "rndc addzone" and "rndc delzone" at close
			to the same time could trigger a deadlock if using
			LMDB. [RT #45209]

4623.	[bug]		Use --with-protobuf-c and --with-libfstrm to find
			protoc-c and fstrm_capture. [RT #45187]

4622.	[bug]		Remove unnecessary escaping of semicolon in CAA and
			URI records. [RT #45216]

4621.	[port]		Force alignment of oid arrays to silence loader
			warnings. [RT #45131]

4620.	[port]		Handle EPFNOSUPPORT being returned when probing
			to see if a socket type is supported. [RT #45214]

4619.	[bug]		Call isc_mem_put instead of isc_mem_free in
			bin/named/server.c:setup_newzones. [RT #45202]

4618.	[bug]		Check isc_mem_strdup results in dns_view_setnewzones.
			Add logging for lmdb call failures. [RT #45204]

4617.	[test]		Update rndc system test to be more delay tolerant.
			[RT #45177]

4616.	[bug]		When using LMDB, zones deleted using "rndc delzone"
			were not correctly removed from the new-zone
			database. [RT #45185]

4615.	[bug]		AD could be set on truncated answer with no records
			present in the answer and authority sections.
			[RT #45140]

4614.	[test]		Fixed an error in the sockaddr unit test. [RT #45146]

4612.	[bug]		Silence 'may be use uninitalised' warning and simplify
			the code in lwres/getaddinfo:process_answer.
			[RT #45158]

4611.	[bug]		The default LMDB mapsize was too low and caused
			errors after few thousand zones were added using
			rndc addzone. A new config option "lmdb-mapsize"
			has been introduced to configure the LMDB
			mapsize depending on operational needs.
			[RT #44954]
