@@ -234,6 +234,13 @@ flaws disclosed in CVE-2016-6170, CVE-2016-8864, CVE-2016-9131,
 CVE-2016-9147, CVE-2016-9444, CVE-2016-9778, CVE-2017-3135,
 CVE-2017-3136, CVE-2017-3137 and CVE-2017-3138.
 
+#### BIND 9.11.2
+
+BIND 9.11.1 is a maintenance release, and addresses the security flaw
+disclosed in CVE-2017-3140. It also addresses several bugs related to
+the use of an LMDB database to store data related to zones added via
+`rndc addzone` or catalog zones.
+
 ### <a name="build"/> Building BIND
 
 BIND requires a UNIX or Linux system with an ANSI C compiler, basic POSIX
