@@ -1,3 +1,7 @@
+4531.	[security]	Some RPZ configurations could go into an infinite
+			query loop when encountering responses with TTL=0.
+			(CVE-2017-3140) [RT #45181]
+
 4530.	[bug]		"dyndb" is dependent on dlopen existing / being
 			enabled. [RT #45291]
 
